[tool.poetry]
name = "myweatherapp"
version = "0.1.0"
description = "my amazing project"
authors = ["NicoleKors <nicolekors345@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
plotly = "^5.24.1"
streamlit = "^1.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
